[package]
name = "rrp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
hex = "0.4.3"
prost = "0.12.1"
rand = "0.8.5"
sha2 = "0.10.8"
thiserror = "1.0.50"
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
